# dataeval

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.build.yml  .gitlab-ci.nox.yml  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  BRANCHING.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.md  ROADMAP.md  Untitled.ipynb  build  capture.sh  conftest.py  container-check  core.39408.REMOVED.git-id  create_dev_env.sh  devenv  environment.yaml  environment.yml  init  log_size  noxfile.py  pyproject.toml  rebase  requirements.cpu.txt  requirements.cu118.txt  requirements.cu128.txt  requirements.dev.txt  requirements.txt  run  (+4 more)
.devcontainer/: Dockerfile  create_dev_env.sh  devcontainer.json  init  post-install.sh  postcreate.sh  requirements.txt  requirements_dev.txt  requirements_docs.txt
.devcontainer/python3-10/: devcontainer.json
.devcontainer/python3-8/: devcontainer.json
.devcontainer/python3-9/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  github-repo-stats.yml  publish.yml  security.yml
.gitlab/: auto_tag.sh  changegen.py  create_release_branch.py  gitlab.py  release.py  update_changelog.py  update_latest_known_good.py  verboselog.py  versiontag.py
.gitlab-ci/: build.yaml  build.yml  publish.yml  release.yaml  release.yml  security.yml  test-publish.yaml  test.yml
.gitlab/ci/: base.yml  compliance.yml  docs.yml  release.yml  security.yml  test.yml
.gitlab/issue_templates/: documentation-concept.md  documentation-howto.md  documentation-reference.md  documentation-tutorial.md  documentation.md  integration.md  prototype.md  release.md  research.md  spike.md
.gitlab/merge_request_templates/: release.md
.gitlab/scripts/: changegen.py  cherry_pick_fixes_to_releases.py  commitgen.py  create_patch_release.py  create_prerelease.py  create_release.py  create_release_branch.py  fix_unknown_licenses.py  gitlab.py  harbor.py  push_verification.py  releasegen.py  remove_docs_artifact_branches.py  remove_image_tags.py  rest.py  test_prerelease.py  update_latest_known_good.py  update_merge_request.py  validate_release_label.py  verboselog.py  versiontag.py
.jupyter_cache/: .cache_source  global.db
aria-ml/dataeval/: README.md
demos/Tutorials/: BayesErrorRateEstimationTutorial.ipynb
docs/: .markdown-link-check.json  CACHE_MANAGEMENT.md  RELEASE.md  about.md  about.rst  api.rst  charts.json  check_notebook_cache.py  conf.py  data.py  docker_build  fetch-docs-cache.sh  generate_charts.py  howtos.rst  index.md  index.rst  installation.md  installation.rst  metrics.rst  ml_lifecycle.rst  ml_lifecycle_rst  push-docs-cache.sh  reference.rst  tutorials.rst  usage.rst
docs/.jupyter_cache/: global.db
docs/API/: index.rst
docs/api/: divergence.rst  outlier-detection.rst
docs/concepts/: BER.md  Balance.md  Bias.md  Clusterer.md  Coverage.md  DataCleaning.md  Divergence.md  Diversity.md  Drift.md  Duplicates.md  LabelParity.md  Linter.md  Metadata.md  MetadataParity.md  ModelTraining.md  OOD.md  Outliers.md  Parity.md  Stats.md  Sufficiency.md  UAP.md  glossary.md  index.md  metric_table.md
docs/how_to/: index.md  index.rst  linting_flags.md  ood_detection_how_to.md  ood_detection_how_to.rst  outlier_detection_how_to.rst  sufficiency_training_how_to.md  (+1 more)
docs/metrics/: ber.rst  (+2 more)
environment/: environment.yaml  requirements-dev.txt  requirements.txt
notebooks/: h2_add_intrinsic_factors.ipynb  h2_align_label_spaces.ipynb  h2_choose_duplicate_detection_method.ipynb  h2_cluster_analysis.ipynb  h2_configure_defaults.ipynb  h2_configure_hardware_settings.ipynb  h2_configure_logging.ipynb  h2_conform_and_merge_datasets.ipynb  h2_custom_image_stats_object_detection.ipynb  h2_dataset_splits.ipynb  h2_deduplicate.ipynb  h2_detect_uncertainty_drift.ipynb  h2_detect_undersampling.ipynb  h2_embed_detection_crops.ipynb  h2_encode_with_onnx.ipynb  h2_lazy_load_images.ipynb  h2_measure_divergence.ipynb  h2_measure_ic_feasibility.ipynb  h2_measure_ic_sufficiency.ipynb  h2_measure_label_independence.ipynb  h2_metadata_from_dataframe.ipynb  h2_reconcile_labels_ontology.ipynb  h2_visualize_cleaning_issues.ipynb  h2_wrap_dataframe_ic_dataset.ipynb  h2_wrap_dataframe_od_dataset.ipynb  tt_assess_data_space.ipynb  tt_augmentation_duplicates.ipynb  tt_clean_dataset.ipynb  tt_detect_drift_with_uncertainty.ipynb  tt_error_analysis.ipynb  tt_identify_bias.ipynb  tt_identify_dataset_gaps.ipynb  tt_identify_ood_samples.ipynb  tt_monitor_shift.ipynb
prototype/: AssociateDriftWithMetadataTutorial.ipynb  AssociateOODwithMetadataTutorial.ipynb  InferDiscreteData.ipynb  OOD_20241111_0942.pt  OOD_VAE_minimal.ipynb  README.md  VAE_balance.ipynb  VAE_based_OOD.ipynb  activations.py  attention.py  ber-metric.ipynb  boxstats.ipynb  boxstats.py  cleaning.py  cluster_binning.py  clusterer.py  clusterer_new.py  coverage.ipynb  decoder.py  dedupe_test.ipynb  domain_classifier.py  drift_metric.ipynb  drift_metric.py  drift_projnorm.py  encoder.py  fast_cluster.py  fast_cluster_test.ipynb  fast_cluster_utils.py  fast_mst.py  fast_mst_test.ipynb  fmow_utils.py  info_tools.py  intrinsic_factors.py  knn_ber_script.py  labelstats.ipynb  labelstats.py  layer.py  linter.py  linting.py  loss_estimation.ipynb  (+52 more)
src/: conftest.py
tests/: MockDemo.ipynb  check_prototype.py  conftest.py  doctest.py  test_alibi.py  test_alibiae.py  test_base.py  test_ber.py  test_calculator_registry.py  test_cifar10.py  test_config.py  test_dataset.py  test_dataset_formatting.py  test_dataset_utils.py  test_deprecated_docs.py  test_divergence.py  test_experimental.py  test_get_least_likely_features.py  test_get_metadata_ood_mi.py  test_helloworld.py  test_interop.py  test_loadlistmetrics.py  test_log.py  test_meta_distribution_compare.py  test_metadata_json.py  test_metrics.py  test_mindeps.py  test_output.py  test_output_metadata.py  test_split_dataset.py  test_torch_utils.py  test_types.py  test_uap.py  test_utils.py  test_utils_metadata.py  test_utils_shared.py
verification/: conftest.py  generate_metarepo.py  helpers.py  registry.yaml
(+3276 files in other folders)
