[project]
name = "dataeval"
dynamic = ["version"]
description = "DataEval provides a simple interface to characterize image data and its impact on model performance across classification and object-detection tasks"
authors = [
  { name = "Andrew Weng", email = "andrew.weng@ariacoustics.com" },
  { name = "Bill Peria", email = "bill.peria@ariacoustics.com" },
  { name = "Jon Botts", email = "jonathan.botts@ariacoustics.com" },
  { name = "Jonathan Christian", email = "jonathan.christian@ariacoustics.com" },
  { name = "Justin McMillan", email = "justin.mcmillan@ariacoustics.com" },
  { name = "Ryan Wood", email = "ryan.wood@ariacoustics.com" },
  { name = "Scott Swan", email = "scott.swan@ariacoustics.com" },
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
maintainers = [
  { name = "ARiA", email = "dataeval@ariacoustics.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numba>=0.61.0",
  "lightgbm>=4",
  "numpy>=1.24.2,<2.3; python_version<'3.12'",
  "numpy>=1.26.2,<2.3; python_version>='3.12,<3.13'",
  "numpy>=2.1.0,<2.3; python_version>='3.13'",
  "polars>=1.0.0",
  "pydantic>=2.8",
  "scikit-learn>=1.5.0; python_version<'3.13'",
  "scikit-learn>=1.5.2; python_version>='3.13'",
  "scipy>=1.10.0; python_version<'3.12'",
  "scipy>=1.11.2; python_version>='3.12,<3.13'",
  "scipy>=1.14.1; python_version>='3.13'",
  "torch>=2.2.0",
  "typing-extensions>=4.12",
  "xxhash>=3.4",
  "psutil>=7.0.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.2.0"]
cu118 = ["torch>=2.2.0"]
cu124 = ["torch>=2.2.0"]
cu128 = ["torch>=2.2.0"]
onnx = ["onnx", "onnxruntime>=1.14.0"]
onnx-gpu = ["onnx", "onnxruntime-gpu>=1.14.0"]

[project.urls]
Homepage = "https://dataeval.ai/"
Repository = "https://github.com/aria-ml/dataeval/"
Documentation = "https://dataeval.readthedocs.io/"

[dependency-groups]
base = [
  "uv>=0.8.0",
]
lock = [
  { include-group = "base" },
  "pyproject2conda>=0.22",
  "poetry>=2",
]
lint = [
  "ruff>=0.11",
  "codespell[toml]>=2.3",
]
doclint = [
  { include-group = "docs"},
  "nbconvert>=7.0",
  "ruff>=0.11",
  "pyright[nodejs]>=1.1.400",
]
test = [
  "coverage[toml]>=7.6",
  "onnx>=1.14.0",
  "pytest>=8.3",
  "pytest-cov>=6.1",
  "pytest-xdist>=3.6.1",
]
type = [
  "pyright[nodejs]>=1.1.400",
]
docs = [
  "numpy>=2.0.2",
  "certifi>=2024.07.04",
  "dataeval-plots[plotly]>=0.0.5a",
  "ipykernel>=6.26.0",
  "ipywidgets>=8.1.1",
  "jinja2>=3.1.6",
  "jupyter-client>=8.6.0",
  "jupyter-cache>=1.0",
  "maite-datasets>=0.0.10",
  "myst-nb>=1.0",
  "opencv-python-headless>=4.8.0",
  "plotly>=6.2.0",
  "sphinx-autoapi>=3.6.0",
  "sphinx-design>=0.6.1",
  "sphinx-immaterial>=0.12.5",
  "sphinx-new-tab-link>=0.8.0",
  "sphinx-tabs>=3.4.7",
  "Sphinx>=7.2.6",
  "torchmetrics>=1.0.0",
  "torchvision>=0.17.0",
  "markupsafe>=3,<3.0.2",
]
dev = [
  { include-group = "base" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "type" },
  { include-group = "docs" },
  "nox>=2025.5.1",
  "nox-uv>=0.6.2",
  "pip>=25.1",
  "jupyter",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu124" },
    { extra = "cu128" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[tool.uv.extra-build-dependencies]
numba = ["tbb>=2021.6"]

[tool.hatch.build.targets.sdist]
include = ["src/dataeval"]

[tool.hatch.build.targets.wheel]
include = ["src/dataeval"]

[tool.hatch.build.targets.wheel.sources]
"src/dataeval" = "dataeval"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dataeval/_version.py"

[tool.poetry]
version = "0.0.0"  # unused

[tool.pyproject2conda.dependencies]
numpy = { skip = true, packages = "numpy<2.3,>=1.24.2" }
scikit-learn = { skip = true, packages = "scikit-learn>=1.5.0" }
scipy = { skip = true, packages = "scipy>=1.10.0" }
torch = { pip = true }  # PyTorch is no longer maintained on conda-forge
xxhash = { skip = true, packages = "python-xxhash>=3.3" }

[tool.pyright]
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--pythonwarnings=ignore::DeprecationWarning",
  "--verbose",
  "--durations=20",
  "--durations-min=1.0",
]
markers = [
  "required: marks tests for required features",
  "optional: marks tests for optional features",
  "cuda: marks tests that require cuda",
  "year: marks tests that need a specified dataset year",
]

[tool.coverage.run]
source = ["src/dataeval"]
branch = true
concurrency = ["multiprocessing"]
parallel = true
omit = ["src/dataeval/_version.py"]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  ": \\.\\.\\.",
  "if TYPE_CHECKING:"
]
include = ["*/src/dataeval/*"]
omit = [
  "src/dataeval/core/_fast_hdbscan/*",
  "src/dataeval/_warm_cache.py",
]
fail_under = 90

[tool.ruff]
exclude = [
  ".devcontainer",
  ".github",
  ".vscode",
  ".jupyter_cache",
  "*env*",
  "output",
  "build",
  ".nox",
  ".tox",
]
line-length = 120
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["A", "ANN", "C4", "C90", "E", "F", "I", "NPY", "S", "SIM", "RET", "RUF100", "UP"]
ignore = ["ANN401", "NPY002"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
per-file-ignores = { "*.ipynb" = ["E402"],  "!src/*" = ["ANN", "S", "RET"]}

[tool.ruff.lint.isort]
known-first-party = ["dataeval"]

[tool.ruff.lint.flake8-builtins]
builtins-strict-checking = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.codespell]
skip = './*env*,./output,./docs/build,./docs/source/.jupyter_cache,./docs/source/*/data,CHANGELOG.md,uv.lock,requirements.txt,*.html,*.lock'
ignore-words-list = ["Hart","FPR"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
